Update practice s0t05 HTML-CSS-Popup according to comments

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
         <title>List of practice tasks</title>
     </head>
@@ -8,8 +8,7 @@
         <h2>Practice tasks:</h2>
         <ul>
             <li>05. HTML & CSS practice: Hooli-style Popup: <a href="https://github.com/kottans/frontend/blob/master/tasks/html-css-popup.md">description</a>
-                | <a href="./html-css-popup/target.html">realization with Pseudo class :target</a>
-                | <a href="./html-css-popup/input.html">realization with Input checkbox</a>
+                | <a href="./html-css-popup/popup.html">realization</a>
             </li>
         </ul>
     </body>
