--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang='en'>
     <head>
         <title>List of practice tasks</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
         <h1>Kottans Front-End course 2020-2021</h1>
         <h2>Practice tasks:</h2>
         <ul>
-            <li>05. HTML & CSS practice: Hooli-style Popup: <a href="https://github.com/kottans/frontend/blob/master/tasks/html-css-popup.md">description</a>
-                | <a href="./html-css-popup/popup.html">realization</a>
-            </li>
+            <li>05. <a href='./practice/html-css-popup/index.html'>HTML & CSS practice: Hooli-style Popup</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/html-css-popup.md'>task</a>)</li>
+            <li>07. <a href='./practice/dom/index.html'>Document Object Model</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/js-dom.md'>task</a>)</li>
         </ul>
     </body>
 </html>
