--- a/practice/html-css-popup/index.html
+++ b/practice/html-css-popup/index.html
@@ -44,13 +44,13 @@
         </nav>
         <header>
             <div class='disclaimer'>
-                Pop-up menu with HTML & CSS Only | <a href="../index.html" class='active_element disclaimer_link'>Back to all tasks</a>
+                Pop-up menu with HTML & CSS Only | <a href="../../index.html" class='active_element disclaimer_link'>Back to all tasks</a>
             </div>
         </header>
         <main>
             <img alt='recycle house' src="img/036-house.svg" class='main_logo'><p class='main_text'><a href="https://nowaste.com.ua/" class='main_link'>NO WASTE<br>Recycling Station</a></p>
         </main>
-        <footer>            
+        <footer>
             <div class='footer'>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" class='active_element footer_link'>Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" class='active_element footer_link'>www.flaticon.com</a></div>
         </footer>
     </body>
