--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li>05. <a href='./practice/html-css-popup/index.html'>HTML & CSS practice: Hooli-style Popup</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/html-css-popup.md'>task</a>)</li>
             <li>07. <a href='./practice/dom/index.html'>Document Object Model</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/js-dom.md'>task</a>)</li>
+            <li>08. <a href='./practice/a-tiny-js-world/index.html'>A Tiny JS World</a> (<a href='https://github.com/OleksiyRudenko/a-tiny-JS-world'>task</a>)</li>
         </ul>
     </body>
 </html>
