Practice s0t09 Frogger game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li>05. <a href='./practice/html-css-popup/index.html'>HTML & CSS practice: Hooli-style Popup</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/html-css-popup.md'>task</a>)</li>
             <li>07. <a href='./practice/dom/index.html'>Document Object Model</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/js-dom.md'>task</a>)</li>
             <li>08. <a href='./practice/a-tiny-js-world/index.html'>A Tiny JS World</a> (<a href='https://github.com/OleksiyRudenko/a-tiny-JS-world'>task</a>)</li>
+            <li>09. <a href='./practice/frogger-game/index.html'>Frogger game</a> (<a href='https://docs.google.com/document/d/1v01aScPjSWCCWQLIpFqvg3-vXLH2e8_SZQKC8jNO0Dc/edit'>task</a>)</li>
             <li>10. <a href='./practice/a-tiny-js-world-oop/index.html'>A Tiny JS World (OOP approach)</a> (<a href='https://github.com/OleksiyRudenko/a-tiny-JS-world'>task</a>)</li>
         </ul>
     </body>
