--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li>08. <a href='./practice/a-tiny-js-world/index.html'>A Tiny JS World</a> (<a href='https://github.com/OleksiyRudenko/a-tiny-JS-world'>task</a>)</li>
             <li>09. <a href='./practice/frogger-game/index.html'>Frogger game</a> (<a href='https://docs.google.com/document/d/1v01aScPjSWCCWQLIpFqvg3-vXLH2e8_SZQKC8jNO0Dc/edit'>task</a>)</li>
             <li>10. <a href='./practice/a-tiny-js-world-oop/index.html'>A Tiny JS World (OOP approach)</a> (<a href='https://github.com/OleksiyRudenko/a-tiny-JS-world'>task</a>)</li>
+            <li>12. <a href='./practice/memory-pair-game/index.html'>Memory pair game</a> (<a href='https://github.com/kottans/frontend/blob/master/tasks/memory-pair-game.md'>task</a>)</li>
         </ul>
     </body>
 </html>
